tests/ui/structs-enums/recover-enum-with-bad-where.stderr
error: unexpected colon after `where`
  --> $DIR/recover-enum-with-bad-where.rs:2:6
   |
LL | where:
   |      ^ help: remove the colon

error[E0405]: cannot find trait `Missing` in this scope
  --> $DIR/recover-enum-with-bad-where.rs:4:8
   |
LL |     T: Missing, {}
   |        ^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0405`.
